--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -18,8 +18,56 @@
         <a href="#">CSS Grid</a>
       </nav>
 
-      <img src="images.jpg" alt="" style="width:50px; height: 50px;"/>
       <h2 class="title">Welcome to HTML and CSS Designs</h2>
+
+      <div id="author">
+        <img src="images.jpg" alt="" style="width: 50px; height: 50px" />
+        <p>Posted by<strong>Laura Jones</strong>on Monday, June 21st 2027</p>
+      </div>
+
+      <img src="logo-image-header.png" alt="" />
+
+      <p class="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates esse
+        asperiores rerum corporis dicta tempore nostrum in beatae ipsa.
+        Architecto accusamus natus eaque, ex et perferendis officiis eveniet
+        cupiditate maiores!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates esse
+        asperiores rerum corporis dicta tempore nostrum in beatae ipsa.
+        Architecto accusamus natus eaque, ex et perferendis officiis eveniet
+        cupiditate maiores!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates esse
+        asperiores rerum corporis dicta tempore nostrum in beatae ipsa.
+        Architecto accusamus natus eaque, ex et perferendis officiis eveniet
+        cupiditate maiores!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates esse
+        asperiores rerum corporis dicta tempore nostrum in beatae ipsa.
+        Architecto accusamus natus eaque, ex et perferendis officiis eveniet
+        cupiditate maiores!
+      </p>
+      <aside>
+        <h3>Related Post</h3>
+        <ul>
+        <li>
+          <img src="images.jpg" style="width: 50px; height: 50px" alt="">
+          <a href="#">How to Learn Web Development</a>
+          <strong>BY Jonas Shcemedimatan</strong>
+        </li>
+       <li>
+        <img src="logo-image-header.png" style="width: 50px; height: 50px" alt="">
+        <a href="#">The Unkown Powers of CSS</a>
+        <strong>BY Jim Dillon</strong>
+      </li>
+      <li>
+        <img src="logo-image-header.png" style="width: 50px; height: 50px" alt="">
+        <a href="#">Why Javscript is Awesome</a>
+        <strong>BY Matilda</strong>
+      </li>
+      </ul>
+      </aside>
+      <footer>
+        Copyright © 2027 by the Code Magazine
+      </footer>
     </div>
   </body>
 </html>
