--- a/Base/07-Omnifood-Desktop/index.html
+++ b/Base/07-Omnifood-Desktop/index.html
@@ -17,8 +17,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Omnifood</title>
   </head>
   <header class="header">
@@ -74,34 +73,15 @@
       </div>
     </section>
 
-    <section class="section-feature">
-      <div class="container">
-        <h2 class="heading-featured-in">As featured in</h2>
-        <div class="logos">
-          <img
-            src="img/logos/business-insider.png"
-            alt="Business Insider logo"
-          />
-          <img src="img/logos/forbes.png" alt="Forbes logo" />
-          <img src="img/logos/techcrunch.png" alt="Techcrunch logo" />
-          <img
-            src="img/logos/the-new-york-times.png"
-            alt="The New York Times logo"
-          />
-          <img src="img/logos/usa-today.png" alt="USA Today logo" />
-        </div>
-      </div>
-    </section>
-
     <section class="section-how">
-      <div class="container">
+      <div class="container grid--2-cols">
         <span class="subheading">How it works</span>
         <h2 class="heading-secondary">
           Your daily dose of healthy in 3 simple steps
         </h2>
       </div>
 
-      <div class="container grid grid--2-cols grid--center-v">
+      <div class="container">
         <div class="step-text-box">
           <p class="step-number">01</p>
           <h3 class="heading-tertiary">Tell us what you like(and what not)</h3>
@@ -112,59 +92,11 @@
             you follow!
           </p>
         </div>
-        <!-- STEP 01 -->
         <div class="step-img-box">
           <img
-            class="step-img"
             src="img/app/app-screen-1.png"
             alt="iPhone app
           preferences selection screen"
-          />
-        </div>
-        <!-- STEP 02 -->
-        <div class="step-img-box">
-          <img
-            class="step-img"
-            src="img/app/app-screen-2.png"
-            alt="iPhone app
-          meal approving plan screen"
-          />
-        </div>
-        <div class="container">
-          <div class="step-text-box">
-            <p class="step-number">02</p>
-            <h3 class="heading-tertiary">
-              Tell us what you like(and what not)
-            </h3>
-            <p class="step-description">
-              Never again waste time thinking about what to eat! Omnifood AI
-              will create 100% personlized weekly meal plan just for you. It
-              make sure you get all the nutrients and vitamins you need, no
-              matter what diet you follow!
-            </p>
-          </div>
-        </div>
-        <!-- STEP 03 -->
-        <div class="container">
-          <div class="step-text-box">
-            <p class="step-number">03</p>
-            <h3 class="heading-tertiary">
-              Tell us what you like(and what not)
-            </h3>
-            <p class="step-description">
-              Never again waste time thinking about what to eat! Omnifood AI
-              will create 100% personlized weekly meal plan just for you. It
-              make sure you get all the nutrients and vitamins you need, no
-              matter what diet you follow!
-            </p>
-          </div>
-        </div>
-        <div class="step-img-box">
-          <img
-            class="step-img"
-            src="img/app/app-screen-3.png"
-            alt="iPhone app
-          delivery screen"
           />
         </div>
       </div>
