--- a/Base/07-Omnifood-Desktop/index.html
+++ b/Base/07-Omnifood-Desktop/index.html
@@ -572,7 +572,7 @@
                 />
               </div>
               <div>
-                <label for="select-where"></label>
+                <label for="select-where">Where did you hear from us?</label>
                 <select id="select-where">
                   <option value="">Please choose an option:</option>
                   <option value="friends">Friends and family</option>
@@ -582,7 +582,7 @@
                   <option value="others">Others</option>
                 </select>
               </div>
-              <button class="btn">Sign up now</button>
+              <button class="btn btn--form">Sign up now</button>
             </form>
           </div>
           <div
