--- a/Base/07-Omnifood-Desktop/index.html
+++ b/Base/07-Omnifood-Desktop/index.html
@@ -643,11 +643,66 @@
               alt="Omnifood logo"
             />
           </a>
+
+          <ul class="social-links">
+            <li class="footer-icon-parent">
+              <a href="#" 
+                ><ion-icon class="footer-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li class="footer-icon-parent">
+            <li>
+              <a href="#" 
+                ><ion-icon class="footer-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li class="footer-icon-parent">
+              <a href="#" 
+                ><ion-icon class="footer-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
+          </ul>
+
+          <p class="copyright">
+            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+          </p>
         </div>
-        <div class="address-col">Address</div>
-        <div class="nav-col">Nav1</div>
-        <div class="nav-col">Nav 2</div>
-        <div class="nav-col">Nav 3</div>
+        <div class="address-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <a href="tel:415-201-6370" class="footer-link">415-201-6370</a
+            ><br />
+            <a href="mailto:hello@Omnifood.com" class="footer-link"
+              >hello@omnifood.com</a
+            >
+          </address>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a href="#">Create account</a></li>
+            <li><a href="#">Sign in</a></li>
+            <li><a href="#">iOS app</a></li>
+            <li><a href="#">Android app</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a href="#">About Omnifood</a></li>
+            <li><a href="#">For Business</a></li>
+            <li><a href="#">Cooking partners</a></li>
+            <li><a href="#">Career</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a href="#">Recipe directory </a></li>
+            <li><a href="#">Help center</a></li>
+            <li><a href="#">Privacy & terms</a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
