--- a/Base/07-Omnifood-Desktop/index.html
+++ b/Base/07-Omnifood-Desktop/index.html
@@ -33,11 +33,11 @@
     <img class="logo" src="/img/omnifood-logo.png" alt="Omnifood logo" />
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a class="main-nav-link" href="#">Section 1</a></li>
-        <li><a class="main-nav-link" href="#">Section 2</a></li>
-        <li><a class="main-nav-link" href="#">Section 3</a></li>
-        <li><a class="main-nav-link" href="#">Section 4</a></li>
-        <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+        <li><a class="main-nav-link" href="#">How It works</a></li>
+        <li><a class="main-nav-link" href="#">Meals</a></li>
+        <li><a class="main-nav-link" href="#">Testimonial</a></li>
+        <li><a class="main-nav-link" href="#">Plan</a></li>
+        <li><a class="main-nav-link nav-cta" href="#">Try for Free</a></li>
       </ul>
     </nav>
   </header>
@@ -634,7 +634,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container grid grid--5-cols">
+      <div class="container grid footer--grid">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img
@@ -645,18 +645,18 @@
           </a>
 
           <ul class="social-links">
-            <li class="footer-icon-parent">
-              <a href="#" 
+            <li>
+              <a href="#"
                 ><ion-icon class="footer-icon" name="logo-facebook"></ion-icon
               ></a>
-            </li class="footer-icon-parent">
+            </li>
             <li>
-              <a href="#" 
+              <a href="#"
                 ><ion-icon class="footer-icon" name="logo-instagram"></ion-icon
               ></a>
             </li>
-            <li class="footer-icon-parent">
-              <a href="#" 
+            <li>
+              <a href="#"
                 ><ion-icon class="footer-icon" name="logo-twitter"></ion-icon
               ></a>
             </li>
@@ -669,11 +669,12 @@
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
           <address class="contacts">
-            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
-            <a href="tel:415-201-6370" class="footer-link">415-201-6370</a
-            ><br />
-            <a href="mailto:hello@Omnifood.com" class="footer-link"
-              >hello@omnifood.com</a
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+            <a href="tel:415-201-6370" class="footer-link">415-201-6370</a>
+            <a href="mailto:hello@Omnifood.com" class="footer-link">
+              hello@omnifood.com</a
             >
           </address>
         </div>
