--- a/Base/07-Omnifood-Desktop/index.html
+++ b/Base/07-Omnifood-Desktop/index.html
@@ -27,9 +27,10 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/queries.css" />
     <title>Omnifood</title>
   </head>
-  <header class="header">
+  <header class="header nav-open">
     <img class="logo" src="/img/omnifood-logo.png" alt="Omnifood logo" />
     <nav class="main-nav">
       <ul class="main-nav-list">
@@ -40,6 +41,11 @@
         <li><a class="main-nav-link nav-cta" href="#">Try for Free</a></li>
       </ul>
     </nav>
+
+    <button class="btn-mobile-nav">
+      <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+      <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+    </button>
   </header>
   <body>
     <main>
@@ -54,9 +60,7 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
-              >Start eating well</a
-            >
+            <a href="#" class="btn btn--full">Start eating well</a>
             <a href="#" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
