--- a/Base/07-Omnifood-Desktop/index.html
+++ b/Base/07-Omnifood-Desktop/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/queries.css" />
     <title>Omnifood</title>
   </head>
-  <header class="header nav-open">
+  <header class="header">
     <img class="logo" src="/img/omnifood-logo.png" alt="Omnifood logo" />
     <nav class="main-nav">
       <ul class="main-nav-list">
