Mobile Navigation is finished

--- a/Base/07-Omnifood-Desktop/index.html
+++ b/Base/07-Omnifood-Desktop/index.html
@@ -25,6 +25,7 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
 
+    <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/queries.css" />
@@ -34,11 +35,11 @@
     <img class="logo" src="/img/omnifood-logo.png" alt="Omnifood logo" />
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a class="main-nav-link" href="#">How It works</a></li>
-        <li><a class="main-nav-link" href="#">Meals</a></li>
-        <li><a class="main-nav-link" href="#">Testimonial</a></li>
-        <li><a class="main-nav-link" href="#">Plan</a></li>
-        <li><a class="main-nav-link nav-cta" href="#">Try for Free</a></li>
+        <li><a class="main-nav-link" href="#how">How It works</a></li>
+        <li><a class="main-nav-link" href="#meals">Meals</a></li>
+        <li><a class="main-nav-link" href="#testimonial">Testimonial</a></li>
+        <li><a class="main-nav-link" href="#pricing">Plan</a></li>
+        <li><a class="main-nav-link nav-cta" href="#cta">Try for Free</a></li>
       </ul>
     </nav>
 
@@ -106,7 +107,7 @@
         </div>
       </section>
 
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -185,7 +186,7 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <div class="meal--tag">
             <span class="subheading">Meals</span>
@@ -327,7 +328,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials grid grid--2-cols">
+      <section class="section-testimonials grid grid--2-cols" id="testimonial">
         <div class="testimonial-container">
           <div class="meal--tag">
             <span class="subheading">Testimonials</span>
@@ -467,7 +468,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading"> Pricing </span>
           <h2 class="heading-secondary">
@@ -584,7 +585,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
